trunk/Archive2/6f/59c8479280168a/output
main.cpp: In function 'int main()':
main.cpp:10:13: error: call of overloaded 'f(float, int)' is ambiguous
    f(5.0f, 5);
             ^
main.cpp:10:13: note: candidates are:
main.cpp:5:6: note: void f(float, long int)
 void f(float f, long int i) { cout << "1" << endl; }
      ^
main.cpp:6:6: note: void f(float, float)
 void f(float f, float d) { cout << "2" << endl; }
      ^
